# PX4-Autopilot

./: .gitignore  .gitmodules  CMakeLists.txt  Modality.toml  SUT.toml  Vagrantfile  build-mavsdk-tests  run-modality-mavsdk-tests
Tools/: export-sut
msg/: battery_status.msg  sensor_combined.msg  sensor_gyro.msg  vehicle_attitude.msg  vehicle_imu.msg  vehicle_land_detected.msg
queries/: flight_termination.tq
scripts/: lttng-env.sh  record-session  run-modality-mavsdk-tests  run-tests.sh  start-sessiond.sh  start-tracing-session.sh  stop-tracing-session.sh
specs/: flight_termination.spec
src/lib/: CMakeLists.txt
src/lib/battery/: CMakeLists.txt  battery.cpp  battery.h  battery_component_definitions.h  tp.h
src/lib/battery/battery-component/: Component.toml  events.csv  probes.csv
src/lib/battery/battery-component/mutators/: battery_warning_mutator.toml
src/lib/battery/generated_mutators/: battery_warning_mutator.c  battery_warning_mutator.h
src/lib/drivers/gyroscope/: CMakeLists.txt  PX4Gyroscope.cpp  PX4Gyroscope.hpp  gyroscope_component_definitions.h  tp.h
src/lib/drivers/gyroscope/generated_mutators/: gyroscope_mutator.c  gyroscope_mutator.h
src/lib/drivers/gyroscope/gyroscope-component/: Component.toml  events.csv  probes.csv
src/lib/drivers/gyroscope/gyroscope-component/mutators/: gyroscope_mutator.toml
src/lib/modality_helpers/: CMakeLists.txt  modality_helpers.c  modality_helpers.cpp  modality_helpers.h
src/modules/commander/: CMakeLists.txt  Commander.cpp  Commander.hpp  commander_component_definitions.h  commander_probe.h  state_machine_helper.cpp  tp.h
src/modules/commander/Arming/PreFlightCheck/checks/: gyroCheck.cpp
src/modules/commander/commander-component/: Component.toml  events.csv  probes.csv
src/modules/commander/failure_detector/: CMakeLists.txt  FailureDetector.cpp  tp.h
src/modules/ekf2/: CMakeLists.txt  ekf2_component_definitions.h  ekf2_main.cpp  tp.h
src/modules/ekf2/ekf2-component/: Component.toml  events.csv  probes.csv
src/modules/land_detector/: CMakeLists.txt  LandDetector.cpp  LandDetector.h  land_detector_component_definitions.h  tp.h
src/modules/land_detector/land-detector-component/: Component.toml  events.csv  probes.csv
src/modules/sensors/: CMakeLists.txt  data_acquisition_component_definitions.h  sensors.cpp  sensors_component_definitions.h  sensors_probe.h  tp.h  voted_sensors_update.cpp
src/modules/sensors/data-acquisition-component/: Component.toml  events.csv  probes.csv
src/modules/sensors/sensors-component/: Component.toml  events.csv  probes.csv
src/modules/sensors/vehicle_imu/: CMakeLists.txt  VehicleIMU.cpp  VehicleIMU.hpp  tp.h  vehicle_imu_component_definitions.h
src/modules/sensors/vehicle_imu/vehicle-imu-component/: Component.toml  events.csv  probes.csv
src/modules/simulator/: simulator_mavlink.cpp
test/mavsdk_tests/: CMakeLists.txt  autopilot_tester.cpp  autopilot_tester.h  mavsdk_test_runner.py  process_helper.py  test_multicopter_mission.cpp
test/mavsdk_tests/configs/: sitl.json
